--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,6 @@
                  android:label="@string/app_name"
                  android:icon="@mipmap/ic_launcher"
                  android:roundIcon="@mipmap/ic_launcher_round"
-                 android:supportsRtl="false"
+                 android:supportsRtl="true"
                  android:theme="@style/AppTheme"/>
 </manifest>
