--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,9 +26,11 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
     implementation group: 'commons-io', name: 'commons-io', version: '2.0.1'
+
+    // viewpager indicator
+    implementation 'com.viewpagerindicator:library:2.4.1@aar'
 }
