--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ buildscript {
 
 allprojects {
     repositories {
-        maven { url "http://dl.bintray.com/populov/maven" }
+        maven { url "https://dl.bintray.com/populov/maven" }
         mavenCentral()
         google()
         jcenter()
