--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,7 @@ dependencies {
 
     // apache
     implementation group: 'commons-io', name: 'commons-io', version: '2.0.1'
+
+    // viewpager indicator
+    api 'com.github.JakeWharton:ViewPagerIndicator:2.4.1'
 }
